# PSUPL

./: .gitignore  CMakeLists.txt  Candidate.cpp  Candidate.h  Grid.h  LICENSE  LevMarFitting.h  Plane.h  PointCloud.cpp  PointCloud.h  PrimitiveShape.h  PrimitiveShapeVisitor.h  README.md  RansacShapeDetector.cpp  RansacShapeDetector.h  ScorePrimitiveShapeVisitor.h  main.cpp  mySetPara.cpp  mySetPara.h  myclass.cpp  myclass.h
GfxTL/: AACube.h  AACubeTree.h  BaseTree.h  ImmediateTreeDataKernels.h  IndexedTreeDataKernels.h  KdTree.h
docs/: README.md
